--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,23 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --env-file=.env src/index.ts ",
     "start": "node --enable-source-maps dist/index.js",
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@mysten/sui": "^1.44.0",
+    "@mysten/walrus": "^0.8.3",
+    "@prisma/client": "^6.19.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@trpc/server": "^10.45.0",
-    "dotenv": "^16.4.5",
-    "zod": "^3.23.8",
-    "@prisma/client": "^5.20.0"
+    "dotenv": "^16.6.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
+    "prisma": "^6.19.0",
     "tsx": "^4.16.0",
-    "typescript": "^5.6.3",
-    "prisma": "^5.20.0"
+    "typescript": "^5.6.3"
   }
 }
