--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@mysten/sui": "^1.44.0",
     "@mysten/walrus": "^0.8.3",
-    "@prisma/client": "^6.19.0",
-    "@prisma/extension-accelerate": "^2.0.2",
     "@trpc/server": "^10.45.0",
     "dotenv": "^16.6.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
-    "prisma": "^6.19.0",
     "tsx": "^4.16.0",
     "typescript": "^5.6.3"
   }
