--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.0.0",
+    "react-pdf": "^10.2.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
