--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "types": [
       "vite/client",
       "node"
