--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -20,7 +20,7 @@
     "useDefineForClassFields": true,
     "types": ["vite/client"]
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.node.json"
