--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "strict": true,
     "target": "ES2020",
     "useDefineForClassFields": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "types": [
       "vite/client",
       "node"
