Add deep link share and likes to book page

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL=
+VITE_TG_BOT_USERNAME=
+VITE_TG_APP_SHORT_NAME=
+# Optional. Supported values: compact, fullscreen
+VITE_TG_APP_MODE=
