--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@tonconnect/ui-react": "^2.2.0",
     "@trpc/client": "^11.7.1",
     "eruda": "^3.4.3",
+    "i": "^0.3.7",
     "i18next": "^25.6.0",
+    "npm": "^11.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.0.0",
     "react-pdf": "^10.2.0",
+    "react-reader": "^2.0.15",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
