--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.1",
-    "@telegram-apps/sdk-react": "^3.3.6",
     "@telegram-apps/telegram-ui": "^2.1.9",
+    "@tma.js/sdk": "^3.1.0",
+    "@tma.js/sdk-react": "^3.0.9",
     "@tonconnect/ui-react": "^2.2.0",
     "@trpc/client": "^11.7.1",
     "eruda": "^3.4.3",
