--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mysten/sui": "^1.44.0",
     "@mysten/walrus": "^0.8.3",
+    "@tma.js/init-data-node": "^2.0.3",
     "@trpc/server": "^11.7.1",
     "dotenv": "^16.6.1",
     "reflect-metadata": "^0.1.13",
