--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@mysten/sui": "^1.44.0",
     "@mysten/walrus": "^0.8.3",
-    "@tma.js/init-data-node": "^2.0.3",
+    "@telegram-apps/init-data-node": "^2.0.10",
+    "@tma.js/init-data-node": "2.0.0",
     "@trpc/server": "^11.7.1",
     "dotenv": "^16.6.1",
+    "fp-ts": "^2.16.11",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
