--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@telegram-apps/telegram-ui": "^2.1.9",
     "@tma.js/sdk": "^3.1.0",
     "@tma.js/sdk-react": "^3.0.9",
-    "@tonconnect/ui-react": "^2.2.0",
+    "@ton/core": "^0.62.0",
+    "@ton/ton": "^16.0.0",
+    "@tonconnect/ui-react": "^2.3.1",
     "@trpc/client": "^11.7.1",
     "eruda": "^3.4.3",
     "i": "^0.3.7",
