--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
 SECRET_KEY=
 ECODING_KEY=
 DATABASE_URL=./main.db
-ALLOWED_TELEGRAM_IDS=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_URL=
+ADMIN_PASSWORD=
