--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@tma.js/init-data-node": "2.0.0",
     "@trpc/server": "^11.7.1",
     "dotenv": "^16.6.1",
+    "fast-xml-parser": "^5.3.2",
     "fp-ts": "^2.16.11",
     "grammy": "^1.38.4",
     "jszip": "^3.10.1",
