--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-i18next": "^16.0.0",
     "react-pdf": "^10.2.0",
     "react-reader": "^2.0.15",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
