--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@ton/ton": "^16.0.0",
     "@tonconnect/ui-react": "^2.3.1",
     "@trpc/client": "^11.7.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "eruda": "^3.4.3",
     "i": "^0.3.7",
     "i18next": "^25.6.0",
     "npm": "^11.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-epub-viewer": "^0.2.0",
     "react-i18next": "^16.0.0",
     "react-pdf": "^10.2.0",
     "react-reader": "^2.0.15",
