--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "eruda": "^3.4.3",
     "i": "^0.3.7",
     "i18next": "^25.6.0",
+    "motion": "^12.23.26",
     "npm": "^11.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-epub-viewer": "^0.2.0",
     "react-i18next": "^16.0.0",
     "react-pdf": "^10.2.0",
     "react-reader": "^2.0.15",
