--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eruda": "^3.4.3",
     "i": "^0.3.7",
     "i18next": "^25.6.0",
+    "lottie-react": "^2.4.1",
     "motion": "^12.23.26",
     "npm": "^11.6.2",
     "react": "^18.3.1",
